website: adjust <pre> style to avoid horizontal overflow

--- a/website/themes/vt6/static/css/vt6.css
+++ b/website/themes/vt6/static/css/vt6.css
@@ -87,3 +87,10 @@ main h4 {
   font-size: 1rem;
   line-height: 1.6rem;
 }
+
+main pre {
+  border: 1px dashed black;
+  padding: 0.5rem;
+  max-width: 100%;
+  overflow-x: auto;
+}
